# csc3991-research

./: CMakeLists.txt
include/glad/: glad.h
mesh/: bricktile.blend  cube.mtl  plane.mtl  sponza_brick_2.mtl  sponza_brick_custom.blend  sponza_brick_custom.blend1  sponza_brick_custom_2.blend  sponza_brick_custom_2.blend1  tile_brick.mtl
mesh/sponza/: sponza_bricks.mtl  sponza_no_bricks.mtl
shader/: line.fs  line.vs  simple.fs  simple.vs  subdiv.tcs  subdiv.tev  subdiv.vs  textured.fs  tilegen.glsl
src/: buffer.cpp  buffer.h  glad.c  main.cpp  mesh.cpp  mesh.h  shader.cpp  shader.h  statsobject.hpp  texture.cpp  texture.h
